location-entry: Fix position of 'Paste & Go' when non-English locale is used

https://bugzilla.gnome.org/show_bug.cgi?id=765374